--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ num-traits = "0.2.15"
 increment = "0.3.0"
 priority-queue = "1.3.0"
 byteorder = "1"
+cap = "0.1.2"
+
+[features]
+default = ["stats"]
+stats = ["cap/stats"]
